--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,7 @@
 		"url":  "https://github.com/Treer/minecraft-map"
 	},
 	"bugs": { "url": "https://github.com/Treer/minecraft-map/issues" },
-	"readme": "..\readme.md",
+	"readme": "../readme.md",
 
 	"devDependencies": {
 		"typescript": "latest",
@@ -20,8 +20,8 @@
 		"build":      "npm run quickbuild",
 		"postbuild":  "npm run minifyBuild && npm run outputRawLibs && npm run outputMinifiedLibs",
 
-		"minifyBuild":        "cd ..\\www\\js\\ && uglifyjs --in-source-map minecraftmap.js.map  --comments --compress --mangle --lint --output minecraftmap.min.js --source-map minecraftmap.min.js.map",
-		"outputMinifiedLibs": "uglifyjs scripts\\libs\\csv.js  --comments --compress --mangle --lint --output ..\\www\\js\\csv.min.js && uglifyjs scripts\\libs\\StackBlur.js  --comments --compress --mangle --lint --output ..\\www\\js\\StackBlur.min.js && uglifyjs scripts\\libs\\jquery.mapz.js  --comments --compress --mangle --lint --output ..\\www\\js\\jquery.mapz.min.js",
-		"outputRawLibs":      "copyfiles -f scripts\\libs\\*.js ..\\www\\js\\"
+		"minifyBuild":        "cd ../www/js/ && uglifyjs --in-source-map minecraftmap.js.map  --comments --compress --mangle --lint --output minecraftmap.min.js --source-map minecraftmap.min.js.map",
+		"outputMinifiedLibs": "uglifyjs scripts/libs/csv.js  --comments --compress --mangle --lint --output ../www/js/csv.min.js && uglifyjs scripts/libs/StackBlur.js  --comments --compress --mangle --lint --output ../www/js/StackBlur.min.js && uglifyjs scripts/libs/jquery.mapz.js  --comments --compress --mangle --lint --output ../www/js/jquery.mapz.min.js",
+		"outputRawLibs":      "copyfiles -f scripts/libs/*.js ../www/js/"
 	}
 }
