add properties to package.json: version, license, keywords, author, contributors
I added myself as a contributor, not because I've contributed anything of value, which I haven't (at least so far), but for completeness, because I'm the one making this small changes.

--- a/src/package.json
+++ b/src/package.json
@@ -1,13 +1,21 @@
 {
 	"name":        "ink-and-parchment-map",
+	"version":     "2.0.0",
 	"description": "Online map for SMP Minecraft servers that don't want to spoil the need to explore.",
+	"license":     "SEE LICENSE IN License.md",
+	"keywords":    [ "minecraft", "map" ],
 	"homepage":    "http://buildingwithblocks.info/",
+	"author":      { "name": "Glenn Fisher", "email": "treer.git@gmail.com" },
 	"repository": {
 		"type": "git",
 		"url":  "https://github.com/Treer/minecraft-map"
 	},
 	"bugs": { "url": "https://github.com/Treer/minecraft-map/issues" },
 	"readme": "../readme.md",
+	"contributors":
+	[
+		{ "name": "Mike Lippert", "email": "mlippert255@gmail.com" }
+	],
 
 	"devDependencies": {
 		"typescript": "latest",
