--- a/src/scripts/tsconfig.json
+++ b/src/scripts/tsconfig.json
@@ -4,7 +4,7 @@
 		"noEmitOnError": true,
 		"removeComments": false,
 		"sourceMap": true,
-		"outFile": "../www/js/minecraftmap.js",
+		"outFile": "../../www/js/minecraftmap.js",
 		"target": "es5"
 	}
 }
