change devDependencies versions from latest to the actual latest versions w a ^ prefix
This shows the version that I used (successfully) just now and allows "compatible" versions which is any later version with the same leftmost non-zero number (in these case, that is the major version number, meaning that `npm update` should get new minor and patch versions).

--- a/src/package.json
+++ b/src/package.json
@@ -18,9 +18,9 @@
 	],
 
 	"devDependencies": {
-		"typescript": "latest",
-		"uglify-js":  "latest",
-		"copyfiles":  "latest"
+		"typescript": "^1.8.10",
+		"uglify-js":  "^2.6.4",
+		"copyfiles":  "^1.0.0"
 	},
 
 	"scripts": {
